--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "discord>=2.3.2",
+    "dotenv>=0.9.9",
     "pynacl>=1.5.0",
 ]
