--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ name = "bot-burger"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
-    "discord>=2.3.2",
+    "discord.py@git+https://github.com/Rapptz/discord.py.git@master",
     "dotenv>=0.9.9",
     "pynacl>=1.5.0",
+    "ffmpeg-python>=0.2.0",
 ]
